--- a/css/index.css
+++ b/css/index.css
@@ -68,10 +68,10 @@ display: flex; flex-direction: column; align-items: center;}
 
 .maindesc-wrapper .subject-wrapper {display: flex; justify-content: center; align-items: center;}
 .maindesc-wrapper .subject-wrapper .subject {cursor: pointer; font-size: 1.2em; padding: 0 .5em 1.2em .5em; position: relative;}
-.maindesc-wrapper .subject-wrapper .subject:nth-child(1)::after {display: none; content: "▲"; position: absolute; bottom: -2px; left: 36%; color: #fff;}
-.maindesc-wrapper .subject-wrapper .subject:nth-child(2)::after {display: none; content: "▲"; position: absolute; bottom: -2px; left: 36%; color: #fff;}
-.maindesc-wrapper .subject-wrapper .subject:nth-child(3)::after {display: none; content: "▲"; position: absolute; bottom: -2px; left: 36%; color: #fff;}
-.maindesc-wrapper .subject-wrapper .subject.active::after {display: inline-block;}
+.maindesc-wrapper .subject-wrapper .subject:nth-child(1)::after {display: none; content: "▲"; position: absolute; bottom: -3px; left: 36%; color: #fff;}
+.maindesc-wrapper .subject-wrapper .subject:nth-child(2)::after {display: none; content: "▲"; position: absolute; bottom: -3px; left: 36%; color: #fff;}
+.maindesc-wrapper .subject-wrapper .subject:nth-child(3)::after {display: none; content: "▲"; position: absolute; bottom: -3px; left: 36%; color: #fff;}
+.maindesc-wrapper .subject-wrapper .subject.active::after {display: inline-block; transition: all .5s;}
 .maindesc-wrapper .subject-wrapper .subject:first-child {color: #ff4605; cursor: pointer; font-size: 1.2em; padding: 0 .5em 1.2em .5em; position: relative;}
 .maindesc-wrapper .subject-wrapper .subject:hover {color: #ff4605; transition: all .5s;}
 .maindesc-wrapper .subject-wrapper .subject:not(:last-child) {margin-right: 1.5em;}
@@ -134,9 +134,9 @@ display: flex; flex-direction: column; align-items: center;}
 .handy-wrapper .bot-wrapper {margin: 1em 0; width: 100%; padding: 1em; display: flex; justify-content: space-between; align-items: center;}
 .bot-wrapper .sns-wrap {display: flex; justify-content: space-between; align-items: center;}
 .sns-wrap > p {margin-right: 2em; font-size: 1.5em; color: #ccc;}
-.sns-wrap > a {margin-right: 1em; font-size: 1.325em; background-color: #ccc; padding: .5em; border-radius: 50%;}
+.sns-wrap > a {margin-right: 1em; font-size: 1.em; background-color: #ccc; padding: .5em; border-radius: 50%;}
 .sns-wrap > :nth-child(3) {padding: .5em .7em;}
-.sns-wrap > a > i {font-size: 1em; color: #eeeeee;}
+.sns-wrap > a > i {font-size: 1em; color: #eee;}
 .sns-wrap > a:hover > i {transform: scale(1.2); transition: all 1s; color: #ff4605;}
 .bt-wrap > .bt-view {font-size: 1.5em; background-color: #ff4605; border-radius: 5px; padding: .5em 1.25em; color: #fff;} 
 
