--- a/css/index.css
+++ b/css/index.css
@@ -118,6 +118,7 @@ display: flex; flex-direction: column; align-items: center;}
 .li1 .desc-wrap .article .price {font-size: 2em; font-weight: 700;}
 
 .list-wrapper .list-wrap {max-width: 50%; height: 100%; display: flex; justify-content: space-between; flex-wrap: wrap;}
+.list-wrapper .list-subwrap {width: 100%;}
 .list-wrapper .list-wrap .list {width: 49%; max-height: 49%; margin: 0 1% 1% 0;}
 .list-wrapper .list-wrap .list:nth-child(3) { margin: 0 1% 0 0;;}
 .list-wrapper .list-wrap .list:nth-child(4) { margin: 0 1% 0 0;}
