--- a/css/index.css
+++ b/css/index.css
@@ -197,7 +197,7 @@ display: flex; flex-direction: column; align-items: center;}
 
 
 /********************** app *********************/
-.app-wrapper {width: 100%;}
+.app-wrapper {width: 100%; margin-bottom: 5em;}
 .app-wrapper .bar-wrapper {width: calc(100% - 100px); height: 50px; margin: 0 auto; margin-bottom: 5em;}
 .bar-wrapper .spon-wrapper {width: 100%; height: 100%;}
 .spon-wrapper .spon {max-width: 15%; margin: 0 5%;}
@@ -205,17 +205,23 @@ display: flex; flex-direction: column; align-items: center;}
 
 .down-wrapper {width: 100%; display: flex; justify-content: space-between; align-items: center; color: #121212;}
 
-.down-wrapper .app-wrap {display: flex; justify-content: space-between; align-items: center; background-color: #ff4605; padding: 5em 3em; border-radius: 20px; width: 48%; margin-right: 2%;}
-.app-wrap .cont-box {width: 50%;}
+.down-wrapper .app-wrap {display: flex; justify-content: space-between; align-items: center; background-color: #ff4605; padding: 1em 3em; border-radius: 20px; min-width: 48%; height: 50vh; margin-right: 2%;}
+.app-wrap .cont-box {min-width: 50%;}
 .cont-box h6.title {font-size: 3em; font-weight: 700; margin-bottom: 1em;}
-.cont-box .bt-wrap {display: flex; flex-direction: column; justify-content: center; width: 60%;}
+.cont-box .bt-wrap {display: flex; flex-direction: column; justify-content: center;}
 .cont-box .bt-ios {margin-bottom: 1em;}
-.cont-box .bt-cont {background-color: #fff; color: #ff4605; padding: .5em 0; text-align: center;}
+.cont-box .bt-cont {width: 60%; background-color: #fff; color: #ff4605; padding: 1em; text-align: center; border-radius: 50px;}
 
-.cont-box2 {width: 50%; position: relative;}
-.cont-box2 .img-wrap {position: absolute; top: -120px; left: 50px;}
+.cont-box2 {min-width: 50%; position: relative;}
+.cont-box2 .img-wrap {width: 100%; position: absolute; top: -120px; left: 50px;}
 .cont-box2 .img-wrap img {width: 100%;}
 
+.down-wrapper .how-wrap {background-color: #222732;display: flex; justify-content: space-between; align-items: center; padding: 1em 3em; border-radius: 20px; min-width: 48%; height: 50vh;}
+.how-wrap .bt-cont { padding: 1em; background-color: transparent; border-radius: 5px; border: 1px solid #ff4605; color: #fff;}
+.cont-box h6.title {font-size: 3em; font-weight: 700; margin-bottom: 1em; color: #fff;}
+.cont-box2 .buy-list {margin-left: 2em;}
+.cont-box2 .buy-list .list {margin-bottom: 1em; font-size: 1.125em; color: #c2c2c2;}
+.cont-box2 .buy-list .list i {margin-right: .25em; color: #ff4605;}
 
 
 /********************** news *********************/
